manifests/threatdef/honeypod/common.yaml
---
layout: null                                                                     
---

---
# Required RBAC:
# - get/list workloadenpoints and pods
apiVersion: v1
kind: Namespace
metadata:
  name: tigera-internal
