manifests/threatdef/honeypod/ip-enum.yaml
---
layout: null                                                                     
---

---
# Honeypod IP Enumeration

# Daemonset Deployment:
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: tigera-internal-1 
  namespace: tigera-internal
spec:
  selector:
    matchLabels:
      app: tigera-internal-1
  template:
    metadata:
      labels:
        app: tigera-internal-1
    spec:
      hostNetwork: false
      hostIPC: false
      hostPID: false
      securityContext:
        runAsUser: 999
        runAsGroup: 999
      imagePullSecrets:
      - name: tigera-pull-secret
      containers:
      - name: tigera-internal-1
        image: quay.io/tigera/honeypod:v2.7.0
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        securityContext:
            privileged: false
            allowPrivilegeEscalation: false
