manifests/threatdef/honeypod/expose-svc.yaml
---
layout: null                                                                     
---

---
# Honeypod Fake Service

# Deployment:
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tigera-internal-3
  namespace: tigera-internal
spec:
  selector:
    matchLabels:
      app: tigera-internal-3
  replicas: 1
  template:
    metadata:
      labels:
        app: tigera-internal-3
    spec:
      hostNetwork: false
      hostIPC: false
      hostPID: false
      securityContext:
        runAsUser: 999
        runAsGroup: 999
      imagePullSecrets:
      - name: tigera-pull-secret
      containers:
      - name: tigera-internal-dashboard
        image: quay.io/tigera/honeypod-exp-service:v2.7.0
        ports:
        - containerPort: 8888
        - containerPort: 443
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
---

# Create two service, one unreachable, one debug
kind: Service
apiVersion: v1
metadata:
  name: tigera-dashboard-internal-debug
  namespace: tigera-internal 
  labels:
    app: tigera-dashboard-internal-debug
spec:
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8080
  selector:
    app: tigera-internal-3
---
kind: Service
apiVersion: v1
metadata:
  name: tigera-dashboard-internal-service
  namespace: tigera-internal 
  labels:
    app: tigera-dashboard-internal-service
spec:
  ports:
    - port: 443 
      protocol: TCP
  selector:
    app: tigera-internal-3
