manifests/threatdef/honeypod/vuln-svc.yaml
---
layout: null                                                                     
---

---
# Honeypod Vulnerable Service

# Deployment:
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tigera-internal-4
  namespace: tigera-internal
spec:
  selector:
    matchLabels:
      app: tigera-internal-4
  replicas: 1
  template:
    metadata:
      labels:
        app: tigera-internal-4
    spec:
      hostNetwork: false
      hostIPC: false
      hostPID: false
      imagePullSecrets:
      - name: tigera-pull-secret
      securityContext:
        runAsUser: 999
        runAsGroup: 999
      containers:
      - name: tigera-internal-4
        image: mysql:latest
        ports:
        - containerPort: 3306
        resources:
          limits:
            memory: 400Mi
          requests:
            cpu: 100m
            memory: 400Mi
        securityContext:
            privileged: false
            allowPrivilegeEscalation: false
---

# Create Mysql service
kind: Service
apiVersion: v1
metadata:
  name: tigera-internal-backend
  namespace: tigera-internal
  labels:
    app: tigera-internal-backend
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: tigera-internal-4
